@@ -153,3 +153,4 @@ Changes between KWord-1.2-beta1 and KWord-1.2-beta2
 - "Protect content" feature
 - Double line border type for frames and paragraphs
 - New dialogbox to resize a column in a table
+- Add new font format (improve underline, strikeout )
